--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <meta name="author" content="Md. Jahidul Islam Sujan">
     <meta http-equiv="refresh" content="0; url=https://mrdeveloperjis.github.io/ict-flow-by-jahid/">
     <title>ICT Flow by Jahid</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-74C4NZTWBD"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-27XD4MY3VC"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-74C4NZTWBD');
+        if (window.location.hostname.endsWith('.github.io')) {
+            gtag('js', new Date());
+            gtag('config', 'G-27XD4MY3VC');
+        }
     </script>
+    <!-- Google tag (gtag.js) --- done -->
 </head>
 
 <body>
